--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "bootstrap-icons": "^1.11.2",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
